force-app/main/default/objects/Customer_Support__kav/fields/Answer_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Answer_Resolution__c</fullName>
    <description>Describes the answer to the Question/Issue</description>
    <inlineHelpText>What is the answer to the question/issue?</inlineHelpText>
    <label>Answer/Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>