force-app/main/default/objects/Customer_Support__kav/fields/Article_Audience__c.field-meta.xml
<CustomField>
    <fullName>Article_Audience__c</fullName>
    <description>Describes who the article is intended for</description>
    <inlineHelpText>Describes who the article is intended for; Internal or External</inlineHelpText>
    <label>Article Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>