force-app/main/default/objects/Customer_Support__kav/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Applicable Brand</description>
    <inlineHelpText>This indicates what Brand(s) are applicable to the article</inlineHelpText>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Irish Setter Hunt</fullName>
            </value>
            <value>
                <fullName>Irish Setter Work</fullName>
            </value>
            <value>
                <fullName>Red Wing Heritage</fullName>
            </value>
            <value>
                <fullName>Red Wing Work</fullName>
            </value>
            <value>
                <fullName>Red Wing Work Wear</fullName>
            </value>
            <value>
                <fullName>Vasque</fullName>
            </value>
            <value>
                <fullName>WORX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>