force-app/main/default/objects/Customer_Support__kav/fields/Dealer_Support_Info__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Support_Info__c</fullName>
    <label>Dealer Support Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>