force-app/main/default/objects/Customer_Support__kav/fields/Email_Ready_Text__c.field-meta.xml
<CustomField>
    <fullName>Email_Ready_Text__c</fullName>
    <description>eMail Ready Text that can be copied &amp; pasted</description>
    <inlineHelpText>Email ready text. If replying via email, copy and paste this text.</inlineHelpText>
    <label>Email Ready Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>