force-app/main/default/objects/Customer_Support__kav/fields/How_to_Submit_Article__c.field-meta.xml
<CustomField>
    <fullName>How_to_Submit_Article__c</fullName>
    <defaultValue>&quot;WHEN ARTICLE IS READY: change Validation Status to   Submit Article for Mgr Review, Click [Assign], Enter Velma Carbajal in Assign to, Enter Due date (14 days from today) and check Send Email.&quot;</defaultValue>
    <description>Instructions on submitting articles</description>
    <inlineHelpText>For Customer Support Reps: How to Submit Articles</inlineHelpText>
    <label>**How to Submit Article**</label>
    <length>255</length>
    <type>Text</type>
</CustomField>