force-app/main/default/objects/Customer_Support__kav/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>This is a link included in an article. Currently 2,083 is what can display in some browsers.</description>
    <inlineHelpText>Link</inlineHelpText>
    <label>Link</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>