force-app/main/default/objects/Customer_Support__kav/fields/Online_Site__c.field-meta.xml
<CustomField>
    <fullName>Online_Site__c</fullName>
    <description>Article contains information regarding this online site</description>
    <inlineHelpText>This article has information regarding this online site</inlineHelpText>
    <label>Online Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online - Red Wing Heritage</fullName>
            </value>
            <value>
                <fullName>Other Online Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>