force-app/main/default/objects/Customer_Support__kav/fields/Publish_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Due_Date__c</fullName>
    <description>The date the article should be published or rejected</description>
    <inlineHelpText>Due date for the article to be published or rejected</inlineHelpText>
    <label>Publish Due Date (defaults to 14 days)</label>
    <type>Date</type>
</CustomField>