force-app/main/default/objects/Customer_Support__kav/fields/Question_Issue__c.field-meta.xml
<CustomField>
    <fullName>Question_Issue__c</fullName>
    <description>Briefly describes what the article is about</description>
    <inlineHelpText>What is the Knowledge Article about?</inlineHelpText>
    <label>Question/Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>