force-app/main/default/objects/Customer_Support__kav/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>The article applies to these regions</description>
    <inlineHelpText>This article is applicable to these regions</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Southeast Asia</fullName>
            </value>
            <value>
                <fullName>South Korea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>