force-app/main/default/objects/Customer_Support__kav/fields/Requires_Marketing_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Marketing_Approval__c</fullName>
    <description>Indicates whether Marketing must review and approve the article</description>
    <inlineHelpText>Indicates whether Marketing must review and approve the article</inlineHelpText>
    <label>Requires Marketing Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>