force-app/main/default/objects/Customer_Support__kav/fields/Requires_Marketing_Approval_by__c.field-meta.xml
<CustomField>
    <fullName>Requires_Marketing_Approval_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Requires Marketing Approval by this Person (look up to user record)</description>
    <inlineHelpText>The person in marketing who should approve this article</inlineHelpText>
    <label>Requires Marketing Approval by</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Marketing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Support</relationshipName>
    <type>Lookup</type>
</CustomField>