force-app/main/default/objects/Customer_Support__kav/fields/Requires_Public_Relations_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Public_Relations_Approval__c</fullName>
    <description>Indicates whether the article must go on for Public Relations review and approval</description>
    <inlineHelpText>Indicates whether the article must go to Public Relations for review and approval</inlineHelpText>
    <label>Requires Public Relations Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>