force-app/main/default/objects/Customer_Support__kav/fields/Requires_Public_Relations_Approval_by__c.field-meta.xml
<CustomField>
    <fullName>Requires_Public_Relations_Approval_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Requires Public Relations Approval by this Person (look up to user)</description>
    <inlineHelpText>The person in public relations who should approve this article</inlineHelpText>
    <label>Requires Public Relations Approval by</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Marketing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Support1</relationshipName>
    <type>Lookup</type>
</CustomField>