force-app/main/default/objects/Customer_Support__kav/fields/Style_Stock__c.field-meta.xml
<CustomField>
    <fullName>Style_Stock__c</fullName>
    <description>Style number or stock number</description>
    <inlineHelpText>Style number or stock number</inlineHelpText>
    <label>Style #/Stock #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>